Remove some lint errors